# task_plastilin

./: .env.sample_with_docker  .env.sample_without_docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
converter/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
converter/migrations/: 0001_initial.py
users/: views.py
users/migrations/: 0001_initial.py
