[tool.poetry]
name = "task-plastilin"
version = "0.1.0"
description = ""
authors = ["Dmitrii, <dima12sik@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pillow = "^10.1.0"
djangorestframework = "^3.14.0"
redis = "^5.0.1"
pytils = "^0.4.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
django-filter = "^23.5"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.3.2"
drf-yasg = "^1.21.7"
celery = "^5.3.6"
eventlet = "^0.33.3"
flake8 = "^6.1.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
